--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </ul>
           </div>
 
-          <div class="templatemo_section_box_last">
+          <div class="templatemo_section_box">
             <div class="templatemo_section_title">Available Jobs</div>
             <ul>
               <li><a href="j-gunmen.html" target="_parent">» Gunmen</a></li>
@@ -56,8 +56,14 @@
             </ul>
           </div>
 
+          <div class="templatemo_section_box_last">
+            <div class="templatemo_section_title">Advert</div>
+            <ul>
+              <li> <script data-ad-client="ca-pub-8609320243653862" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script></li>
+            </ul>
+          </div>
+
           <div class="templatemo_image_box">
-            <script data-ad-client="ca-pub-8609320243653862" async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
           	<a href="http://www.flashmo.com" target="_blank"></a> </div>
 <div class="templatemo_section_box_2">
   <h3>Mike Inc Office</h3>
