i think its finished?

--- a/n-july92020.html
+++ b/n-july92020.html
@@ -30,7 +30,8 @@
           <div class="templatemo_section_box">
             <div class="templatemo_section_title">Posts</div>
             <ul>
-              <li><a href="n-july92020.html" target="_parent">» July 9, 2020 - The Diamond Casino Heist</a></li>
+              <li><a href="n-july92020.html" target="_parent" style="color:#fff;">» July 9, 2020 - The Diamond Casino
+                  Heist</a></li>
             </ul>
           </div>
 
@@ -60,7 +61,7 @@
             <div class="templatemo_section_title">Available Jobs</div>
             <ul>
               <li><a href="j-gunmen.html" target="_parent">» Gunmen</a></li>
-              <li><a href="j-drivers.html" target="_blank" style="color:#fff;">» Drivers</a></li>
+              <li><a href="j-drivers.html" target="_blank">» Drivers</a></li>
               <li><a href="j-hackers.html" target="_blank">» Hackers</a></li>
             </ul>
           </div>
@@ -87,10 +88,27 @@
         <div id="templatemo_right_section">
 
           <div class="templatemo_content_area">
-            <h1>DRIVERS</h1>
-            <img src="images/jdriver.jpg" style="width:25%;">
-            <p>Email To Apply: apply@mikeinc.tk</p>
-
+            <h1>The Diamond Casino Heist</h1>
+            <p>Something’s up at The Diamond Casino & Resort. Patrons have reported seeing unusual security patrols on
+              the casino floor. Penthouse owners are receiving cryptic text messages from the Cheng Family Holdings.
+              Insiders have spotted unfamiliar blueprints on Agatha Baker’s desk, and visitors to their website are
+              certain the intrusions there can only mean one thing: there’s a crew getting ready to take the whole thing
+              down.</p>
+            <p>&nbsp;</p>
+            <p>The Diamond Casino Heist is an all-new approach to Heist architecture and execution: one huge
+              gameplay-packed operation as you work with the Cheng family to infiltrate the most secure building in all
+              of Los Santos. Featuring a diverse range of opportunities for set-up and prep missions that shape your
+              plan of attack, multiple paths of approach, constantly changing security measures and a dizzying array of
+              choices once inside. Expect outcomes for you and your crew to change on the fly as you deal with each new
+              situation, leading to more choices mid-mission. Even if the best laid plans go sideways, you’ll have the
+              opportunity to keep the mission afloat without failing by shooting your way out with your remaining team
+              lives, all allowing the Heist to be highly replayable with new scenarios unfolding each time.</p>
+            <p>&nbsp;</p>
+            <p>In order to plan the biggest Heist ever perpetrated in Los Santos, Heist crew leaders will setup an
+              unexpected new commercial venture as a front, a retro Arcade business property shrouding the nerve center
+              within where Heist operations are staged and rehearsed. While the business runs above, down below you can
+              practice hacking keypads or cracking vault doors, store equipment and getaway vehicles, and owners of
+              existing businesses can add a Master Control Terminal to handle all current operations.</p>
           </div>
           <div class="templatemo_two_column_section">
             <div class="templatemo_two_column_left">
