--- a/c-mikemike.html
+++ b/c-mikemike.html
@@ -14,7 +14,7 @@
     <div class="templatemo_container">
       <div id="templatemo_header">
         <div id="templatemo_logo_section">
-          <a href="index.html" target="_parent">Mike Inc</a></div>
+          <a href="index.html">Mike Inc</a></div>
         <div id="templatemo_header_text">
           We Big Criminals Boiiii
         </div>
@@ -30,38 +30,38 @@
           <div class="templatemo_section_box">
             <div class="templatemo_section_title">Posts</div>
             <ul>
-              <li><a href="n-july92020.html" target="_parent">» July 9, 2020 - The Diamond Casino Heist</a></li>
+              <li><a href="n-july92020.html">» July 9, 2020 - The Diamond Casino Heist</a></li>
             </ul>
           </div>
 
           <div class="templatemo_section_box">
             <div class="templatemo_section_title">Our Businesses</div>
             <ul>
-              <li><a href="b-documentforgery.html" target="_parent">» Document Forgery</a></li>
-              <li><a href="b-weedfarm.html" target="_blank">» Weed Farm</a></li>
-              <li><a href="b-counterfeitcash.html" target="_blank">» Counterfeit Cash</a></li>
-              <li><a href="b-methlab.html" target="_blank">» Meth Lab</a></li>
-              <li><a href="b-cocainefactory.html" target="_blank">» Cocaine Factory</a></li>
+              <li><a href="b-documentforgery.html">» Document Forgery</a></li>
+              <li><a href="b-weedfarm.html">» Weed Farm</a></li>
+              <li><a href="b-counterfeitcash.html">» Counterfeit Cash</a></li>
+              <li><a href="b-methlab.html">» Meth Lab</a></li>
+              <li><a href="b-cocainefactory.html">» Cocaine Factory</a></li>
             </ul>
           </div>
 
           <div class="templatemo_section_box">
             <div class="templatemo_section_title">Top Criminals</div>
             <ul>
-              <li><a href="c-mikemike.html" target="_parent" style="color:#fff;">» Mike Mike</a></li>
-              <li><a href="c-mikemilligan.html" target="_blank">» Mike Milligan</a></li>
-              <li><a href="c-ronaldmcdonald.html" target="_blank">» Ronald McDonald</a></li>
-              <li><a href="c-clownmcdibbledabble.html" target="_blank">» Clown McDibbledabble</a></li>
-              <li><a href="c-whipmawhopmagatedave.html" target="_blank">» Whipmawhopmagate Dave</a></li>
+              <li><a href="c-mikemike.html" style="color:#fff;">» Mike Mike</a></li>
+              <li><a href="c-mikemilligan.html">» Mike Milligan</a></li>
+              <li><a href="c-ronaldmcdonald.html">» Ronald McDonald</a></li>
+              <li><a href="c-clownmcdibbledabble.html">» Clown McDibbledabble</a></li>
+              <li><a href="c-whipmawhopmagatedave.html">» Whipmawhopmagate Dave</a></li>
             </ul>
           </div>
 
           <div class="templatemo_section_box">
             <div class="templatemo_section_title">Available Jobs</div>
             <ul>
-              <li><a href="j-gunmen.html" target="_parent">» Gunmen</a></li>
-              <li><a href="j-drivers.html" target="_blank">» Drivers</a></li>
-              <li><a href="j-hackers.html" target="_blank">» Hackers</a></li>
+              <li><a href="j-gunmen.html">» Gunmen</a></li>
+              <li><a href="j-drivers.html">» Drivers</a></li>
+              <li><a href="j-hackers.html">» Hackers</a></li>
             </ul>
           </div>
 
@@ -76,7 +76,7 @@
           </div>
 
           <div class="templatemo_image_box">
-            <a href="http://www.flashmo.com" target="_blank"></a> </div>
+            <a href="http://www.flashmo.com"></a> </div>
           <div class="templatemo_section_box_2">
             <h3>Mike Inc Office</h3>
             <p>747 Boeing Street, Mars</p>
